2013-06-21  Maciej W. Rozycki  <macro@codesourcery.com>

	* elf/dl-dst.h (DL_DST_REQUIRED): Remove call to
	DL_DST_REQ_STATIC.
	(DL_DST_REQ_STATIC): Remove macro.

2013-06-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #7006]
	* soft-fp/op-common.h (_FP_FROM_INT): Do not call _FP_FRAC_SLL
	with a shift of 0 bits.

2013-06-21  Maciej W. Rozycki  <macro@codesourcery.com>

	* dlfcn/Makefile (tststatic2-ENV): Redefine in terms of
	$(tststatic-ENV).

2013-06-21  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	[BZ #15655]
	* sysdeps/sh/sh4/fpu/fgetexcptflg.c: New file.

2013-06-20  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* config.h.in (HAVE_CC_INHIBIT_LOOP_TO_LIBCALL): New define.
	* configure.in (libc_cv_cc_loop_to_function): Check if compiler
	accepts -fno-tree-loop-distribute-patterns.
	* include/libc-symbols.h (inhibit_loop_to_libcall): New macro.
	* string/memmove.c (MEMMOVE): Disable loop transformation to avoid
	recursive call.
	* string/memset.c (memset): Likewise.
	* string/test-memmove.c (simple_memmove): Disable loop transformation
	to library calls.
	* string/test-memset.c (simple_memset): Likewise.
	* benchtests/bench-memmove.c (simple_memmove): Likewise.
	* benchtests/bench-memset.c (simple_memset): Likewise.
	* configure: Regenerated.

2013-06-20  Joseph Myers  <joseph@codesourcery.com>

	* math/test-misc.c (main): Ignore fesetround failure when failures
	of subsequent rounding tests would be ignored.

	[BZ #15654]
	* math/fedisblxcpt.c (fedisableexcept): Return 0.
	* math/feenablxcpt.c (feenableexcept): Return 0 for argument 0.
	* math/fegetenv.c (__fegetenv): Return 0.
	* math/fegetexcept.c (fegetexcept): Return 0.
	* math/fegetround.c (fegetround) [FE_TONEAREST]: Return
	FE_TONEAREST.
	* math/feholdexcpt.c (feholdexcept): Return 0.
	* math/fesetenv.c (__fesetenv): Return 0.
	* math/fesetround.c (fesetround) [FE_TONEAREST]: Return 0 for
	argument FE_TONEAREST.
	* math/feupdateenv.c (__feupdateenv): Return 0.